Fix margin spacing with nested lists
This seemed to be caused by top level list
text being rendered as paragraphs, as by default
all lists have no margin spacing.

--- a/csunplugged/static/scss/website.scss
+++ b/csunplugged/static/scss/website.scss
@@ -398,3 +398,7 @@ body {
 .btn {
   cursor: pointer;
 }
+
+ol, ul {
+    margin-bottom: 1rem !important;
+}
